--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2174,16 +2174,16 @@ header{
     filter    : alpha(opacity=100);
     opacity   : 1;
 }
-
+/*
 .top-search {
     position          : absolute;
     right             : -16px;
     top               : 130%;
-    width             : 250px;
+    width             : 100%;
     opacity           : 0;
     visibility        : hidden;
 }
-
+*/
 .search-submit {
     position          : absolute;
     top               : 0;
@@ -2503,6 +2503,7 @@ header{
     line-height: 120%;
     margin-top:30px;
     word-break: keep-all;
+    margin-right: 20px;
 }
 #footer {
     padding: 100px 0 80px;
@@ -3769,14 +3770,14 @@ span.type::after {
 }
 .news-list > li {
     width: calc(100% - 10px);
-    margin-bottom: 22px;
+    margin-bottom: 15px;
     background-color: #fff;
     border:1px solid #F2F2F2;
     border-radius: 6px;
     display: flex;
     flex-direction: column;
-    padding: 0 25px;
-    height: 60px;
+    padding: 15px 25px;
+    /* height: 60px; */
     justify-content: center;
     position: relative;
     box-shadow: 0 2px 6px rgba(47, 83, 109, 0.1);
@@ -3794,6 +3795,7 @@ span.type::after {
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
+    margin-bottom: 5px;
 }
 .news-list > li div {
     display: flex;
@@ -3914,6 +3916,26 @@ span.type::after {
     border: 2px solid var(--primary-color);
     color: var(--primary-color);
     font-size: 14px;
+}
+
+.support-ranking .sub-heading {
+    position: relative;
+    margin: 70px 120px 0px 10px;
+    font-size: 15px;
+    color: #5142FC;    display: flex;
+    align-items: center;
+    justify-content: space-between;
+
+}
+.support-ranking .sub-heading::after {
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom: -10px;
+    width: 75px;
+    height: 2px;
+    background: #5142FC;
+    display: block;
 }
 .support-ranking .sc-box-icon-inner {
     margin-left: 0;
@@ -4060,17 +4082,17 @@ span.type::after {
     background:var(--primary-color3);
     color: var(--primary-color);
 }
-/*.box {
+.user-box {
     position: absolute;
     top: 18px;
     right: 20px
-}*/
+}
 .btn-dropdown {
     padding: 0 18px;
     border: none !important;
     background: #fff;
     color: #7A798A;
-    font-size: 15px;
+    font-size: 12px;
     outline: none;
     cursor: pointer;
     display: flex;
@@ -4095,23 +4117,25 @@ span.type::after {
     display: none;
     position: absolute;
     top: 50px;
-    left: 0;
     right: 0;
     padding: 10px 0;
     border-radius: 10px;
     box-shadow: 0 2px 6px rgba(0, 0, 0, .1);
     background-color: #fff;
-    border:1px solid #E7E7E7;
+    border:1px solid #E7E7E7; width:250px;
+    z-index:300;
   }
   
 .nav-dropdown .btn-close {
     color:#7A798A;
     font-size:14px;
-    display:flex;
-    align-items:center;
-    justify-content: center;
-    padding:10px 0;
+    padding:15px 0;
     font-weight:700;
+    display: inline-block;
+    text-align: center;
+    width: 230px;
+    border-top:1px solid var(--primary-color5);
+    border-radius:0;
 }
 .nav-dropdown .btn-close:hover {
     color: #6666e2;
@@ -4121,7 +4145,7 @@ span.type::after {
   }
   .nav-dropdown ul li {
     padding: 8px 15px;
-    font-size: 16px;
+    font-size: 14px;
     text-align: left;
     cursor: pointer;
     color:#484848;
@@ -4131,9 +4155,9 @@ span.type::after {
     display: flex;
     color: #3d3935;
     text-decoration: none;
-    border-bottom:1px solid #E6E6E6;
-    padding-bottom: 5px;
-    align-items: center;
+    justify-content: left;
+    margin: 8px 0;
+    width:200px
   }
   .nav-dropdown ul li.noHover:hover {
     background-color: transparent;
@@ -4195,7 +4219,7 @@ span.type::after {
   
 }
 @media only screen and (max-width: 1199px) {
-    .box {
+    .user-box {
         display:none;
     }
  
@@ -4407,8 +4431,19 @@ span.type::after {
     .tf-section .crop-message {
         top: calc(50% - 200px);
     }
+    .ranking-number .ranking-infor h5 {
+        font-size: 32px;
+    }
 }
 @media only screen and (max-width: 575px) {
+    .main-event .event .content p {
+        font-size: 20px !important;
+        padding:0 20px;
+      }
+      .main-event .content .event-button {
+        height: 45px !important;
+        line-height: 20px !important;
+      }
 
 }
 
@@ -4436,10 +4471,17 @@ overflow: hidden;}
     text-align: center;
     line-height: 130%;
     letter-spacing: 0;
-    font-weight: 600;}
+    font-weight: 600;
+    margin-bottom: 10px;
+}
 
-    .main-event .event  .content p{font-size: 24px;margin-bottom: 10px;
-        text-align: center;}
+    .main-event .event  .content p{
+        font-size: 24px;
+        margin-bottom: 10px;
+        word-break: keep-all;
+        text-align: center;
+        line-height:24px;
+    }
 
         .main-event    .content .event-button {
             display: inline-block;
@@ -4453,3 +4495,39 @@ overflow: hidden;}
             font-weight: 500;
             line-height: 38px;
         }
+
+         /*20230602*/
+         .tile-p{color: var(--primary-color3);}
+         .tf-section {
+            padding: 100px 0;}
+
+        .top-search .box{   
+             background: var(--primary-color);
+            box-shadow: 0px 3px 16px rgba(47, 83, 109, 0.12);
+            border-radius: 12px;
+            padding: 24px;
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+          }
+
+          .top-search {
+            position          : absolute;
+            left          : 0;
+            top               : 130%;
+            width             : 100%;
+            opacity           : 0;
+            visibility        : hidden;
+        }
+        .top-search .boder {
+            position: absolute;
+            content: "";
+            width: 1px;
+            height: 100%;
+            left: 0;
+            top: 0;
+            background-color: var(--bg-section2);
+            top: 6px;
+        }
+
+       
